# aes-c

./: CMakeLists.txt  README.md  VERSION  pyproject.toml
.github/workflows/: build-test.yml  install-test.yml  sphinx.yml
cmake/: DefaultConfig.cmake
docs/: CMakeLists.txt  GetVersionFromFile.py  api.rst  conf.py  contents.rst  gh-page-redirect.html  index.rst
include/ay/: aes.h
src/: aes-ni.c  aes.c
src/cpu-capability/: CMakeLists.txt
src/cpu-capability/src/: cpu-capability.c
tests/: CMakeLists.txt
tests/install-test/: main.c
