[tool.poetry]
name = "aes-c"
version = "0.1.0"
description = ""
authors = ["arnavyc <arnavyc@outlook.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
breathe = "^4.31.0"
myst-parser = "^0.15.2"
sphinx-multiversion = "^0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
